--- a/app/styles/custom-font.css
+++ b/app/styles/custom-font.css
@@ -2,32 +2,5 @@
   font-family: 'IBMPlexSerif';
   font-display: swap;
   font-weight: 400;
-  src: url('./fonts/IBMPlexSerif-Text.woff2') format('woff2');
-}
-@font-face {
-  font-family: 'IBMPlexSerif';
-  font-display: swap;
-  font-weight: 400;
-  font-style: italic;
-  src: url('./fonts/IBMPlexSerif-TextItalic.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'AvenirNext';
-  font-display: swap;
-  font-weight: normal;
-  src: url('./fonts/AvenirNextLTPro-Regular.otf') format('otf');
-}
-@font-face {
-  font-family: 'AvenirNext';
-  font-display: swap;
-  font-weight: normal;
-  font-style: italic;
-  src: url('./fonts/AvenirNextLTPro-It.otf') format('otf');
-}
-@font-face {
-  font-family: 'AvenirNext';
-  font-display: swap;
-  font-weight: bold;
-  src: url('./fonts/AvenirNextLTPro-Bold.otf') format('otf');
+  src: url('./fonts/Norwester\ 400.otf') format('otf');
 }
