--- a/styles/app.css
+++ b/styles/app.css
@@ -56,6 +56,23 @@
   }
 }
 
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(calc(-100% - 1rem));
+  }
+}
+
+.scroll {
+  animation: scroll 10s linear infinite;
+}
+
+.reverse {
+  animation-direction: reverse;
+}
+
 shop-pay-button {
   width: 100%;
   height: 3rem;
