pdp improvements, product card improvements

--- a/styles/app.css
+++ b/styles/app.css
@@ -17,7 +17,7 @@
 @font-face {
   font-family: 'AvenirNextLTPro-Regular';
   src: url('https://cdn.shopify.com/s/files/1/0056/6342/4630/files/AvenirNextLTPro-Regular.otf?v=1680451224');
-   font-weight: normal;
+  font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
@@ -91,6 +91,10 @@ shop-pay-button {
   width: 100%;
   height: 3rem;
   display: table;
+}
+
+.shop-pay-button {
+  border-radius: 0px !important;
 }
 
 @layer base {
