--- a/styles/app.css
+++ b/styles/app.css
@@ -15,14 +15,14 @@
       format('opentype');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: ;
 }
 @font-face {
   font-family: 'AvenirNextLTPro-Regular';
   src: url('https://cdn.shopify.com/s/files/1/0056/6342/4630/files/AvenirNextLTPro-Regular.otf?v=1680451224');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 @font-face {
   font-family: 'AvenirNextLTPro-Regular';
