--- a/styles/app.css
+++ b/styles/app.css
@@ -15,6 +15,7 @@
       format('opentype');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 @font-face {
   font-family: 'AvenirNextLTPro-Regular';
