--- a/styles/app.css
+++ b/styles/app.css
@@ -4,14 +4,13 @@
 
 @font-face {
   font-family: 'Norwester-Regular';
-  src: url('https://cdn.shopify.com/s/files/1/0056/6342/4630/files/norwester.woff?v=1681662075')
-      format('woff'),
-    url('https://cdn.shopify.com/s/files/1/0056/6342/4630/files/Norwester_400.otf?v=1679588100')
-      format('opentype');
+  src: url('https://cdn.shopify.com/s/files/1/0056/6342/4630/files/norwester.woff?v=1681662075') format('woff'),
+    url('https://cdn.shopify.com/s/files/1/0056/6342/4630/files/Norwester_400.otf?v=1679588100') format('opentype');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
+
 @font-face {
   font-family: 'AvenirNextLTPro-Regular';
   src: url('https://cdn.shopify.com/s/files/1/0056/6342/4630/files/AvenirNextLTPro-Regular.otf?v=1680451224');
@@ -19,6 +18,7 @@
   font-style: normal;
   font-display: optional;
 }
+
 @font-face {
   font-family: 'AvenirNextLTPro-Regular';
   src: url('https://cdn.shopify.com/s/files/1/0056/6342/4630/files/AvenirNextLTPro-Bold.otf?v=1680451224');
@@ -29,16 +29,25 @@
 
 /* Tokens */
 :root {
-  --color-primary: 20 20 20; /* Text, buttons, etc. */
-  --color-contrast: 250 250 250; /* Backgrounds, borders, etc. */
-  --color-accent: 191 72 0; /* Labels like "On sale" */
-  --font-size-fine: 0.75rem; /* text-xs */
-  --font-size-copy: 1rem; /* text-base */
-  --font-size-lead: 1.125rem; /* text-lg */
-  --font-size-heading: 2rem; /* text-2xl */
-  --font-size-display: 3rem; /* text-4xl */
+  --color-primary: 20 20 20;
+  /* Text, buttons, etc. */
+  --color-contrast: 250 250 250;
+  /* Backgrounds, borders, etc. */
+  --color-accent: 191 72 0;
+  /* Labels like "On sale" */
+  --font-size-fine: 0.75rem;
+  /* text-xs */
+  --font-size-copy: 1rem;
+  /* text-base */
+  --font-size-lead: 1.125rem;
+  /* text-lg */
+  --font-size-heading: 2rem;
+  /* text-2xl */
+  --font-size-display: 3rem;
+  /* text-4xl */
   --color-shop-pay: #5a31f4;
-  --shop-pay-button--width: 100%; /* Sets the width for the shop-pay-button web component */
+  --shop-pay-button--width: 100%;
+  /* Sets the width for the shop-pay-button web component */
   --height-nav: 3.5rem;
   --screen-height: 100vh;
   --screen-height-dynamic: 100vh;
@@ -46,14 +55,19 @@
   @media (min-width: 32em) {
     --height-nav: 4rem;
   }
+
   @media (min-width: 48em) {
     --height-nav: 6rem;
-    --font-size-heading: 2.25rem; /* text-4xl */
-    --font-size-display: 3.75rem; /* text-6xl */
+    --font-size-heading: 2.25rem;
+    /* text-4xl */
+    --font-size-display: 3.75rem;
+    /* text-6xl */
   }
+
   @supports (height: 100svh) {
     --screen-height: 100svh;
   }
+
   @supports (height: 100dvh) {
     --screen-height-dynamic: 100dvh;
   }
@@ -63,6 +77,7 @@
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -72,6 +87,7 @@
   from {
     transform: translateX(0);
   }
+
   to {
     transform: translateX(calc(-100% - 1rem));
   }
@@ -129,6 +145,7 @@ shop-pay-button {
   }
 
   .prose {
+
     h1,
     h2,
     h3,
@@ -144,6 +161,7 @@ shop-pay-button {
 
 @layer components {
   .article {
+
     h2,
     h3,
     h4,
@@ -151,12 +169,15 @@ shop-pay-button {
     h6 {
       @apply font-sans text-primary;
     }
+
     @apply prose mx-auto mb-12 grid justify-center font-serif text-primary;
+
     p,
     ul,
     li {
       @apply mb-4 text-lg;
     }
+
     img {
       @apply md:-mx-8 lg:-mx-16;
 
@@ -164,6 +185,7 @@ shop-pay-button {
         width: calc(100% + 4rem);
         max-width: 100vw;
       }
+
       @media (min-width: 64em) {
         width: calc(100% + 8rem);
       }
@@ -183,6 +205,7 @@ shop-pay-button {
 
   .hiddenScroll {
     scrollbar-width: none;
+
     &::-webkit-scrollbar {
       display: none;
     }
@@ -194,6 +217,7 @@ shop-pay-button {
 
   .strike {
     position: relative;
+
     &::before {
       content: '';
       display: block;
@@ -210,10 +234,12 @@ shop-pay-button {
 
   .card-image {
     @apply relative flex items-center justify-center overflow-clip rounded;
+
     &::before {
       content: ' ';
       @apply absolute left-0 top-0 z-10 block h-full w-full rounded shadow-border;
     }
+
     img {
       @apply aspect-[inherit] w-full object-cover;
     }
@@ -231,8 +257,10 @@ shop-pay-button {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 * {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 /*! Inherited styles */
@@ -247,4 +275,13 @@ shop-pay-button {
   height: auto;
   opacity: 0.75;
   width: 100%;
+}
+
+.uploadcare--widget__button {
+  background-color: black !important;
+}
+
+button.uploadcare--button_primary {
+  background-color: black !important;
+  border: 1px solid black !important;
 }
