--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2224,6 +2224,9 @@ select{
 .h-\[800px\]{
   height: 800px;
 }
+.h-auto{
+  height: auto;
+}
 .h-cart-content{
   height: calc(100svh - 4rem);
 }
@@ -2735,11 +2738,11 @@ select{
 .border-0{
   border-width: 0px;
 }
-.border-2{
-  border-width: 2px;
-}
 .border-\[1\.5px\]{
   border-width: 1.5px;
+}
+.border-2{
+  border-width: 2px;
 }
 .border-x-0{
   border-left-width: 0px;
@@ -2775,10 +2778,6 @@ select{
 .border-FF-red{
   --tw-border-opacity: 1;
   border-color: rgba(233, 56, 43, var(--tw-border-opacity));
-}
-.border-contrast\/20{
-  border-color: rgba(250, 250, 250, 0.2);
-  border-color: rgb(var(--color-contrast) / 0.2);
 }
 .border-contrast\/30{
   border-color: rgba(250, 250, 250, 0.3);
@@ -2823,6 +2822,10 @@ select{
 .border-white{
   --tw-border-opacity: 1;
   border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+}
+.border-contrast\/20{
+  border-color: rgba(250, 250, 250, 0.2);
+  border-color: rgb(var(--color-contrast) / 0.2);
 }
 .border-b-black{
   --tw-border-opacity: 1;
@@ -3062,6 +3065,9 @@ select{
 }
 .pb-2{
   padding-bottom: 0.5rem;
+}
+.pb-20{
+  padding-bottom: 5rem;
 }
 .pb-4{
   padding-bottom: 1rem;
@@ -3354,6 +3360,12 @@ select{
 .shadow-lightHeader{
   --tw-shadow: inset 0px -1px 0px 0px rgba(21, 21, 21, 0.05);
   --tw-shadow-colored: inset 0px -1px 0px 0px var(--tw-shadow-color);
+  box-shadow: 0 0 rgba(0,0,0,0), 0 0 rgba(0,0,0,0), var(--tw-shadow);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0,0,0,0)), var(--tw-ring-shadow, 0 0 rgba(0,0,0,0)), var(--tw-shadow);
+}
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: 0 0 rgba(0,0,0,0), 0 0 rgba(0,0,0,0), var(--tw-shadow);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0,0,0,0)), var(--tw-ring-shadow, 0 0 rgba(0,0,0,0)), var(--tw-shadow);
 }
