--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3232,6 +3232,9 @@ select{
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-\[11px\]{
+  font-size: 11px;
+}
 .font-bold{
   font-weight: 700;
 }
