--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2037,6 +2037,10 @@ select{
   margin-left: auto;
   margin-right: auto;
 }
+.my-1{
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
 .my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
@@ -2189,6 +2193,9 @@ select{
 .h-24{
   height: 6rem;
 }
+.h-28{
+  height: 7rem;
+}
 .h-3{
   height: 0.75rem;
 }
@@ -2198,6 +2205,9 @@ select{
 .h-4{
   height: 1rem;
 }
+.h-40{
+  height: 10rem;
+}
 .h-48{
   height: 12rem;
 }
@@ -2206,9 +2216,6 @@ select{
 }
 .h-8{
   height: 2rem;
-}
-.h-\[176px\]{
-  height: 176px;
 }
 .h-\[500px\]{
   height: 500px;
@@ -2322,6 +2329,9 @@ select{
 }
 .min-w-0{
   min-width: 0px;
+}
+.min-w-32{
+  min-width: 8rem;
 }
 .min-w-\[0\.75rem\]{
   min-width: 0.75rem;
@@ -2897,6 +2907,11 @@ select{
   background-color: rgba(243, 244, 246, 1);
   background-color: rgba(243, 244, 246, var(--tw-bg-opacity, 1));
 }
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, 1);
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity, 1));
+}
 .bg-green-100{
   --tw-bg-opacity: 1;
   background-color: rgba(220, 252, 231, 1);
@@ -3120,9 +3135,6 @@ select{
 .pt-12{
   padding-top: 3rem;
 }
-.pt-16{
-  padding-top: 4rem;
-}
 .pt-2{
   padding-top: 0.5rem;
 }
@@ -3272,6 +3284,10 @@ select{
   color: rgba(250, 250, 250, 1);
   color: rgb(var(--color-contrast) / var(--tw-text-opacity, 1));
 }
+.text-contrast\/50{
+  color: rgba(250, 250, 250, 0.5);
+  color: rgb(var(--color-contrast) / 0.5);
+}
 .text-contrast\/90{
   color: rgba(250, 250, 250, 0.9);
   color: rgb(var(--color-contrast) / 0.9);
@@ -3348,6 +3364,11 @@ select{
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, 1);
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
+}
+.text-yellow-500{
+  --tw-text-opacity: 1;
+  color: rgba(234, 179, 8, 1);
+  color: rgba(234, 179, 8, var(--tw-text-opacity, 1));
 }
 .underline{
   text-decoration-line: underline;
