--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2835,6 +2835,11 @@ select{
   border-color: rgba(255, 255, 255, 1);
   border-color: rgba(255, 255, 255, var(--tw-border-opacity, 1));
 }
+.border-slate-300{
+  --tw-border-opacity: 1;
+  border-color: rgba(203, 213, 225, 1);
+  border-color: rgba(203, 213, 225, var(--tw-border-opacity, 1));
+}
 .border-b-black{
   --tw-border-opacity: 1;
   border-bottom-color: rgba(0, 0, 0, 1);
