--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2829,6 +2829,11 @@ select{
   border-color: rgba(233, 56, 43, 1);
   border-color: rgba(233, 56, 43, var(--tw-border-opacity, 1));
 }
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgba(0, 0, 0, 1);
+  border-color: rgba(0, 0, 0, var(--tw-border-opacity, 1));
+}
 .border-contrast\/20{
   border-color: rgba(250, 250, 250, 0.2);
   border-color: rgb(var(--color-contrast) / 0.2);
@@ -3784,9 +3789,22 @@ button.uploadcare--button_primary {
   background-color: rgba(191, 219, 254, 1);
   background-color: rgba(191, 219, 254, var(--tw-bg-opacity, 1));
 }
+.hover\:bg-gray-100:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgba(243, 244, 246, 1);
+  background-color: rgba(243, 244, 246, var(--tw-bg-opacity, 1));
+}
 .hover\:bg-primary\/80:hover{
   background-color: rgba(20, 20, 20, 0.8);
   background-color: rgb(var(--color-primary) / 0.8);
+}
+.hover\:bg-primary\/5:hover{
+  background-color: rgba(20, 20, 20, 0.05);
+  background-color: rgb(var(--color-primary) / 0.05);
+}
+.hover\:bg-primary\/90:hover{
+  background-color: rgba(20, 20, 20, 0.9);
+  background-color: rgb(var(--color-primary) / 0.9);
 }
 .hover\:text-primary:hover{
   --tw-text-opacity: 1;
@@ -3797,14 +3815,17 @@ button.uploadcare--button_primary {
   color: rgba(20, 20, 20, 0.5);
   color: rgb(var(--color-primary) / 0.5);
 }
-.hover\:text-primary\/80:hover{
-  color: rgba(20, 20, 20, 0.8);
-  color: rgb(var(--color-primary) / 0.8);
-}
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, 1);
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
+}
+.hover\:text-white\/80:hover{
+  color: rgba(255, 255, 255, 0.8);
+}
+.hover\:text-primary\/80:hover{
+  color: rgba(20, 20, 20, 0.8);
+  color: rgb(var(--color-primary) / 0.8);
 }
 .hover\:underline:hover{
   text-decoration-line: underline;
@@ -4970,4 +4991,12 @@ button.uploadcare--button_primary {
     border-color: rgba(20, 20, 20, 0.2);
     border-color: rgb(var(--color-primary) / 0.2);
   }
+}
+.\[\&_svg\]\:fill-white svg{
+  fill: #fff;
+}
+.\[\&_svg\]\:text-white svg{
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
 }
