--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2408,6 +2408,9 @@ select{
 .max-w-xl{
   max-width: 36rem;
 }
+.max-w-\[660px\]{
+  max-width: 660px;
+}
 .flex-1{
   flex: 1 1 0%;
 }
@@ -3147,6 +3150,10 @@ select{
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .pb-0{
   padding-bottom: 0px;
